--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,4 +1,14 @@
 ---
 # defaults file for dummy
-vars:
-  xyz: "default-zabidin"
+
+# basic var scenario 
+xyz: "default-zabidin"
+
+#  complex variable scenario
+nodes:
+  - name: default-standalone-node        #node-name such as name-node secondary-name-node data-node1 data-node2
+    zone: europe-west4-a                 #distribute other nodes
+    machine_type: f1-micro
+    ips:
+        - nic: 
+            name: "sa-ip-01"
